--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,11 @@ homepage = "https://github.com/ESIPFed/pygeoweaver"
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4"
-setuptools = ">=61.0"
-requests = "2.28.2"
-pydantic = "1.10.9"
-ipython = "8.14.0"
-pandas = "2.0.2"
+setuptools = ""
+requests = ""
+pydantic = ""
+ipython = ""
+pandas = ""
 
 [tool.poetry.scripts]
 
